[gd_scene load_steps=14 format=3 uid="uid://c0vle7tnv8wko"]

[ext_resource type="Script" path="res://world.gd" id="1_wsuws"]
[ext_resource type="Script" path="res://beaver.gd" id="2_2x7l1"]
[ext_resource type="Texture2D" uid="uid://bwdbciol1dyox" path="res://Beaver64.png" id="3_pd71k"]
[ext_resource type="Script" path="res://tree.gd" id="4_bxeqw"]
[ext_resource type="Texture2D" uid="uid://bg4ro0phey56k" path="res://OldTree.png" id="5_1xcss"]
[ext_resource type="Texture2D" uid="uid://bm0x4k41ypgr0" path="res://goose.png" id="6_0idr3"]
[ext_resource type="Script" path="res://goose.gd" id="6_6m57a"]
[ext_resource type="Script" path="res://maple_tree.gd" id="8_fu3o6"]
[ext_resource type="Texture2D" uid="uid://cct0y7ajg0dvj" path="res://Maple.png" id="8_n1bx8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dt7pk"]
size = Vector2(131, 72.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_shqk2"]
size = Vector2(144, 199)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sd1v6"]
size = Vector2(179, 112.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_na60j"]
size = Vector2(124, 52.75)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_wsuws")

[node name="Beaver" type="CharacterBody2D" parent="."]
script = ExtResource("2_2x7l1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Beaver"]
position = Vector2(561, 365)
shape = SubResource("RectangleShape2D_dt7pk")

[node name="Sprite2D" type="Sprite2D" parent="Beaver"]
position = Vector2(564, 364)
scale = Vector2(2.15625, 2.40625)
texture = ExtResource("3_pd71k")

[node name="OldTree" type="StaticBody2D" parent="."]
script = ExtResource("4_bxeqw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="OldTree"]
position = Vector2(702, 298)
shape = SubResource("RectangleShape2D_shqk2")

[node name="Layer1" type="Sprite2D" parent="OldTree"]
position = Vector2(701, 300)
scale = Vector2(11.5, 12.375)
texture = ExtResource("5_1xcss")

[node name="Layer2" type="Sprite2D" parent="OldTree"]
position = Vector2(700, 315)
scale = Vector2(9.2, 9.9)
texture = ExtResource("5_1xcss")

[node name="Layer3" type="Sprite2D" parent="OldTree"]
position = Vector2(703, 330)
scale = Vector2(6.9, 7.425)
texture = ExtResource("5_1xcss")

[node name="Layer4" type="Sprite2D" parent="OldTree"]
position = Vector2(700, 345)
scale = Vector2(4.6, 4.95)
texture = ExtResource("5_1xcss")

[node name="Layer5" type="Sprite2D" parent="OldTree"]
position = Vector2(693, 360)
scale = Vector2(2.3, 2.475)
texture = ExtResource("5_1xcss")

[node name="Goose" type="CharacterBody2D" parent="."]
script = ExtResource("6_6m57a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goose"]
position = Vector2(287.5, 349.75)
shape = SubResource("RectangleShape2D_sd1v6")

[node name="Sprite2D" type="Sprite2D" parent="Goose"]
position = Vector2(259, 355)
texture = ExtResource("6_0idr3")

[node name="Maple_Tree" type="StaticBody2D" parent="."]
position = Vector2(300, 300)
script = ExtResource("8_fu3o6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Maple_Tree"]
position = Vector2(-150, -14)
shape = SubResource("RectangleShape2D_na60j")

[node name="Sprite2D" type="Sprite2D" parent="Maple_Tree"]
position = Vector2(-136, -142)
texture = ExtResource("8_n1bx8")
